# PGPE

./: README.md  pyproject.toml  pyrefly.toml  ruff.toml
src/pgpe/: __init__.py  optimizers.py  pgpe.py  utils.py
tests/: test_pgpe.py
