[project]
name = "pgpe"
version = "0.1.0"
description = "A modern, typed, pure-NumPy implementation of PGPE."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Davide Tenedini", email = "davide.tenedini@polimi.it" },
]
dependencies = [
    "numpy>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgpe"]

[dependency-groups]
dev = [
    "pyrefly>=0.46.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
